메인 피드백 반영

--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -129,57 +129,59 @@
 			</div>
 			<div class="best-menu">
 				<div class="cube">
-					<div class="cube__face cube__face--front">
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-					</div>
-					<div class="cube__face cube__face--top">
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-					</div>
-					<div class="cube__face cube__face--back">
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-					</div>
-					<div class="cube__face cube__face--bottom">
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
+					<div class="cube__cube">
+						<div class="cube__face cube__face--front">
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+						</div>
+						<div class="cube__face cube__face--top">
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+						</div>
+						<div class="cube__face cube__face--back">
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+						</div>
+						<div class="cube__face cube__face--bottom">
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+						</div>
 					</div>
 				</div>
 				<div class="best-menu__container">
@@ -446,57 +448,59 @@
 					</div>
 				</div>
 				<div class="cube">
-					<div class="cube__face cube__face--front">
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-					</div>
-					<div class="cube__face cube__face--top">
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-					</div>
-					<div class="cube__face cube__face--back">
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-						<span class="cube__text">BEST</span>
-					</div>
-					<div class="cube__face cube__face--bottom">
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
-						<span class="cube__text">SELLER</span>
+					<div class="cube__cube">
+						<div class="cube__face cube__face--front">
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+						</div>
+						<div class="cube__face cube__face--top">
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+						</div>
+						<div class="cube__face cube__face--back">
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+						</div>
+						<div class="cube__face cube__face--bottom">
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+							<span class="cube__text">SELLER</span>
+						</div>
 					</div>
 				</div>
 			</div>
