메인 피드백 반영

--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -25,9 +25,10 @@
 							<div class="swiper-wrapper">
 								<div class="swiper-slide">
 									<div class="visual__video">
-										<video muted="muted" onloadedmetadata="this.muted = true" poster="./assets/images/dummy.png" playsinline>
+										<!-- <video muted="muted" onloadedmetadata="this.muted = true" poster="./assets/images/dummy.png" playsinline>
 											<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" type="video/mp4" autostart="false">
-										</video>
+										</video> -->
+										<img src="./assets/images/@img_product_celeb.png" alt="" style="width: 100%; height: 100%;">
 									</div>
 									<div class="visual__contents">
 										<dov class="visual__inner">
@@ -40,7 +41,7 @@
 										</dov>
 									</div>
 								</div>
-								<div class="swiper-slide">
+								<!-- <div class="swiper-slide">
 									<div class="visual__video">
 										<video muted="muted" onloadedmetadata="this.muted = true" poster="./assets/images/dummy.png" playsinline>
 											<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" type="video/mp4" autostart="false">
@@ -73,26 +74,26 @@
 											<a href="#" class="visual__link">VIEW</a>
 										</dov>
 									</div>
-								</div>
+								</div> -->
 							</div>
 							<div class="visual__pagination swiper-pagination"></div>
 						</div>
 						<div class="visual__control">
 							<div class="visual__preview">
 								<div class="visual__video">
-									<video autoplay loop muted playsinline>
+									<!-- <video autoplay loop muted playsinline>
 										<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
-									</video>
+									</video> -->
 								</div>
 								<div class="visual__video">
-									<video autoplay loop muted playsinline>
+									<!-- <video autoplay loop muted playsinline>
 										<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" type="video/mp4">
-									</video>
+									</video> -->
 								</div>
 								<div class="visual__video">
-									<video autoplay loop muted playsinline>
+									<!-- <video autoplay loop muted playsinline>
 										<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4">
-									</video>
+									</video> -->
 								</div>
 							</div>
 							<div class="marquee">
@@ -131,6 +132,11 @@
 				<div class="cube">
 					<div class="cube__cube">
 						<div class="cube__face cube__face--front">
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
+							<span class="cube__text">BEST</span>
 							<span class="cube__text">BEST</span>
 							<span class="cube__text">BEST</span>
 							<span class="cube__text">BEST</span>
@@ -188,22 +194,22 @@
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="./assets/images/@img_product01.png" alt=""></div>
+												<div class="best-menu__img"><img data-src="./assets/images/@img_product01.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 											</div>
 										</div>
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="./assets/images/@img_product_celeb.png" alt=""></div>
+												<div class="best-menu__img"><img data-src="./assets/images/@img_product_celeb.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 											</div>
 										</div>
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="./assets/images/dummy.png" alt=""></div>
+												<div class="best-menu__img"><img data-src="./assets/images/dummy.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 											</div>
 										</div>
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="./assets/images/@img_product_celeb.png" alt=""></div>
+												<div class="best-menu__img"><img data-src="./assets/images/dummy.png" data-src="./assets/images/@img_product_celeb.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 											</div>
 										</div>
 									</div>
@@ -224,19 +230,19 @@
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="./assets/images/@img_product02.png" alt=""></div>
+												<div class="best-menu__img"><img data-src="./assets/images/@img_product02.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 											</div>
 										</div>
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="./assets/images/@img_product_celeb.png" alt=""></div>
+												<div class="best-menu__img"><img data-src="./assets/images/@img_product_celeb.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 											</div>
 										</div>
 									</div>
 								</div>
 							</div>
 							<div class="best-menu__item best-menu__item--figure">
-								<div class="best-menu__img"><img src="./assets/images/dummy.png" alt=""></div>
+								<div class="best-menu__img"><img loading="lazy"src="./assets/images/dummy.png" alt=""></div>
 							</div>
 						</div>
 						<div class="best-menu__row best-menu__row--split">
@@ -256,12 +262,12 @@
 										<div class="swiper-wrapper">
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
-													<div class="best-menu__img"><img src="./assets/images/@img_product03.png" alt=""></div>
+													<div class="best-menu__img"><img data-src="./assets/images/@img_product03.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 												</div>
 											</div>
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
-													<div class="best-menu__img"><img src="./assets/images/@img_product_celeb.png" alt=""></div>
+													<div class="best-menu__img"><img data-src="./assets/images/@img_product_celeb.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 												</div>
 											</div>
 										</div>
@@ -282,12 +288,12 @@
 										<div class="swiper-wrapper">
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
-													<div class="best-menu__img"><img src="./assets/images/@img_product04.png" alt=""></div>
+													<div class="best-menu__img"><img data-src="./assets/images/@img_product04.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 												</div>
 											</div>
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
-													<div class="best-menu__img"><img src="./assets/images/@img_product_celeb.png" alt=""></div>
+													<div class="best-menu__img"><img data-src="./assets/images/@img_product_celeb.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 												</div>
 											</div>
 										</div>
@@ -308,12 +314,12 @@
 										<div class="swiper-wrapper">
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
-													<div class="best-menu__img"><img src="./assets/images/@img_product05.png" alt=""></div>
+													<div class="best-menu__img"><img data-src="./assets/images/@img_product05.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
 												</div>
 											</div>
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
-													<div class="best-menu__img"><img src="./assets/images/@img_product_celeb.png" alt=""></div>
+													<div class="best-menu__img"><img data-src="./assets/images/@img_product_celeb.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 												</div>
 											</div>
 										</div>
@@ -336,14 +342,12 @@
 										<div class="swiper-wrapper">
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
-													<div class="best-menu__img">
-														<img src="./assets/images/@product.png" alt="">
-													</div>
+													<div class="best-menu__img"><img data-src="./assets/images/@product.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
 												</div>
 											</div>
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
-													<div class="best-menu__img"><img src="./assets/images/dummy.png" alt=""></div>
+													<div class="best-menu__img"><img data-src="./assets/images/dummy.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
 												</div>
 											</div>
 										</div>
@@ -367,12 +371,12 @@
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="./assets/images/@img_product06.png" alt=""></div>
+												<div class="best-menu__img"><img data-src="./assets/images/@img_product06.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
 											</div>
 										</div>
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="./assets/images/@img_product_celeb.png" alt=""></div>
+												<div class="best-menu__img"><img data-src="./assets/images/@img_product_celeb.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
 											</div>
 										</div>
 									</div>
@@ -393,12 +397,12 @@
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="./assets/images/@img_product07.png" alt=""></div>
+												<div class="best-menu__img"><img data-src="./assets/images/@img_product07.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
 											</div>
 										</div>
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="./assets/images/@img_product_celeb.png" alt=""></div>
+												<div class="best-menu__img"><img data-src="./assets/images/@img_product_celeb.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
 											</div>
 										</div>
 									</div>
@@ -419,12 +423,12 @@
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="./assets/images/@img_product08.png" alt=""></div>
+												<div class="best-menu__img"><img data-src="./assets/images/@img_product08.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
 											</div>
 										</div>
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img src="./assets/images/@img_product_celeb.png" alt=""></div>
+												<div class="best-menu__img"><img data-src="./assets/images/@img_product_celeb.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
 											</div>
 										</div>
 									</div>
@@ -485,16 +489,16 @@
 						<div class="celeb-curation__swiper">
 							<div class="celeb-curation__celeb">
 								<div class="celeb-curation__cut">
-									<img src="./assets/images/@dummy_seleb01.png" alt="">
+									<img src="./assets/images/@dummy_seleb01.png" alt="" loading="lazy">
 								</div>
 								<div class="celeb-curation__cut">
-									<img src="./assets/images/@dummy_seleb02.png" alt="">
+									<img src="./assets/images/@dummy_seleb02.png" alt="" loading="lazy">
 								</div>
 								<div class="celeb-curation__cut">
-									<img src="./assets/images/@dummy_seleb03.png" alt="">
+									<img src="./assets/images/@dummy_seleb03.png" alt="" loading="lazy">
 								</div>
 								<div class="celeb-curation__cut">
-									<img src="./assets/images/@dummy_seleb04.png" alt="">
+									<img src="./assets/images/@dummy_seleb04.png" alt="" loading="lazy">
 								</div>
 							</div>
 							<div class="swiper">
@@ -506,7 +510,7 @@
 													<div class="menu__item">
 														<div class="menu__round">
 															<div class="menu__inner">
-																<div class="menu__img"><img src="./assets/images/dummy.png" alt=""></div>
+																<div class="menu__img"><img data-src="./assets/images/dummy.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
 															</div>
 														</div>
 													</div>
@@ -514,9 +518,7 @@
 														<div class="menu__round">
 															<div class="menu__inner">
 																<a href="#" class="menu__link">
-																	<div class="menu__img">
-																		<img src="./assets/images/product.png" alt="">
-																	</div>
+																	<div class="menu__img"><img data-src="./assets/images/product.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
 																	<div class="menu__info">
 																		<p class="menu__name">
 																			22SS SLIM NEAT<br>
@@ -538,7 +540,7 @@
 													<div class="menu__item">
 														<div class="menu__round">
 															<div class="menu__inner">
-																<div class="menu__img"><img src="./assets/images/dummy.png" alt=""></div>
+																<div class="menu__img"><img data-src="./assets/images/dummy.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
 															</div>
 														</div>
 													</div>
@@ -546,9 +548,7 @@
 														<div class="menu__round">
 															<div class="menu__inner">
 																<a href="#" class="menu__link">
-																	<div class="menu__img">
-																		<img src="./assets/images/product.png" alt="">
-																	</div>
+																	<div class="menu__img"><img data-src="./assets/images/product.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
 																	<div class="menu__info">
 																		<p class="menu__name">
 																			22SS SLIM NEAT<br>
