--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 				<tr>
 					<td>ARCHIVE</td>
 					<td>PC_COL_1000</td>
-					<td><a href="" target="_blank">./#</a></td>
+					<td><a href="./archive/PC_COL_1000.html" target="_blank">./archive/PC_COL_1000.html</a></td>
 					<td></td>
 				</tr>
 				<tr>
