--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -25,10 +25,9 @@
 							<div class="swiper-wrapper">
 								<div class="swiper-slide">
 									<div class="visual__video">
-										<!-- <video muted="muted" onloadedmetadata="this.muted = true" poster="./assets/images/dummy.png" playsinline>
+										<video muted="muted" onloadedmetadata="this.muted = true" poster="./assets/images/dummy.png" playsinline>
 											<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" type="video/mp4" autostart="false">
-										</video> -->
-										<img src="./assets/images/@img_product_celeb.png" alt="" style="width: 100%; height: 100%;">
+										</video>
 									</div>
 									<div class="visual__contents">
 										<dov class="visual__inner">
@@ -41,7 +40,7 @@
 										</dov>
 									</div>
 								</div>
-								<!-- <div class="swiper-slide">
+								<div class="swiper-slide">
 									<div class="visual__video">
 										<video muted="muted" onloadedmetadata="this.muted = true" poster="./assets/images/dummy.png" playsinline>
 											<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" type="video/mp4" autostart="false">
@@ -74,26 +73,26 @@
 											<a href="#" class="visual__link">VIEW</a>
 										</dov>
 									</div>
-								</div> -->
+								</div>
 							</div>
 							<div class="visual__pagination swiper-pagination"></div>
 						</div>
 						<div class="visual__control">
 							<div class="visual__preview">
 								<div class="visual__video">
-									<!-- <video autoplay loop muted playsinline>
+									<video autoplay loop muted playsinline>
 										<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
-									</video> -->
+									</video>
 								</div>
 								<div class="visual__video">
-									<!-- <video autoplay loop muted playsinline>
+									<video autoplay loop muted playsinline>
 										<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" type="video/mp4">
-									</video> -->
+									</video>
 								</div>
 								<div class="visual__video">
-									<!-- <video autoplay loop muted playsinline>
+									<video autoplay loop muted playsinline>
 										<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4">
-									</video> -->
+									</video>
 								</div>
 							</div>
 							<div class="marquee">
