--- a/src/order/basket.html
+++ b/src/order/basket.html
@@ -1703,20 +1703,13 @@
 
         <!-- 선택상품 제어 버튼 -->
         <div class="order_selectorder_new">
-          <div module="Order_SelectOrder" class="ec-base-button">
-              <span class="gLeft">
-                  <!-- <strong class="text">선택상품을</strong> -->
-                  <!-- <a href="#none" onclick="{$action_delete}">삭제하기</a> -->
-                  <a href="#none" onclick="{$action_wishlist}" class="{$wishlist_display|display}" >관심상품등록</a>
-                  <a href="#none" onclick="{$action_move_oversea}" class="{$move_oversea_display|display}">해외배송상품 장바구니로 이동</a>
-                  <a href="#none" onclick="{$action_hope}" class="{$hope_display|display}">상품조르기</a>
-              </span>
-              <span class="gRight">
-                  <a href="#none" onclick="{$action_order_store_pickup_select}" class="{$action_order_store_pickup_select_display|display}" link-order="/order/orderform.html{$param}" link-login="/member/login.html">스토어픽업 상품 선택</a>
-                  <a href="#none" onclick="{$action_empty}">장바구니비우기</a>
-                  <!-- <a href="#none" onclick="{$action_estimate}" link="/estimate/userform.html">견적서출력</a> -->
-              </span>
-          </div>
+            <div module="Order_TotalOrder" class="ec-base-button">
+                <div class="gRight">
+                    <span>
+                    <a href="/" class="small_button">쇼핑계속하기</a>
+                    </span>
+                </div>
+            </div>
         </div>
 
         <!-- 총 주문금액 : 국내배송상품 -->
@@ -1826,11 +1819,6 @@
               <div>
                 <a href="#none" onclick="{$action_order_all}" class="{$buy_display|display} point" link-order="/order/orderform.html{$param}" link-login="/member/login.html">전체상품주문</a>
                 <a href="#none" onclick="{$action_order_select}" link-order="/order/orderform.html{$param}" link-login="/member/login.html">선택상품주문</a>
-              </div>
-              <div>
-                <span>
-                    <a href="/">쇼핑계속하기</a>
-                </span>
               </div>
               
               <script>
