--- a/src/index.html
+++ b/src/index.html
@@ -37,10 +37,16 @@
 					<td>작업중</td>
 				</tr>
 				<tr>
-					<td>ARCHIVE</td>
+					<td>ARCHIVE - 목록</td>
 					<td>PC_COL_1000</td>
 					<td><a href="./archive/PC_COL_1000.html" target="_blank">./archive/PC_COL_1000.html</a></td>
-					<td></td>
+					<td>작업중</td>
+				</tr>
+				<tr>
+					<td>ARCHIVE - 상세</td>
+					<td>PC_COL_1001</td>
+					<td><a href="./archive/PC_COL_1001.html" target="_blank">./archive/PC_COL_1001.html</a></td>
+					<td>작업중</td>
 				</tr>
 				<tr>
 					<td>Product > 목록</td>
