장바구니 작업중

--- a/src/order/basket.html
+++ b/src/order/basket.html
@@ -222,8 +222,8 @@
                           <td>
                               <span class="{$nplusevent_hide_display|display} ec-base-qty-new">
                                 <span class="ec-base-qty">
-                                    <a href="javascript:;" onclick="{$out_shortcut}"><img src="/assets/images/btn_count_down.png" alt="수량감소" class="down" /></a>
-                                    {$form.quantity}<a href="javascript:;" onclick="{$add_shortcut}"><img src="/assets/images/btn_count_up.png" alt="수량증가" class="up" /></a>
+                                    <a href="javascript:;" onclick="{$out_shortcut}"><img src="/assets/images/btn_count_down15.png" alt="수량감소" class="down" /></a>
+                                    {$form.quantity}<a href="javascript:;" onclick="{$add_shortcut}"><img src="/assets/images/btn_count_up15.png" alt="수량증가" class="up" /></a>
                                 </span>
                                 <a href="javascript:;" class="count_change" onclick="{$action_modify}">변경</a>
                               </span>
@@ -2130,37 +2130,7 @@
 							<li class="menu__item">
 								<div class="menu__round">
 									<div class="menu__inner">
-										<a href="#" class="menu__link menu__link--none">
-											<!-- soldout -->
-											<div class="marquee">
-												<div class="marquee__mask">
-													<p class="marquee__loop">
-														<span class="marquee__text">SOLD OUT</span>
-														<span class="marquee__text">SOLD OUT</span>
-														<span class="marquee__text">SOLD OUT</span>
-														<span class="marquee__text">SOLD OUT</span>
-													</p>
-													<p class="marquee__loop">
-														<span class="marquee__text">SOLD OUT</span>
-														<span class="marquee__text">SOLD OUT</span>
-														<span class="marquee__text">SOLD OUT</span>
-														<span class="marquee__text">SOLD OUT</span>
-													</p>
-													<p class="marquee__loop">
-														<span class="marquee__text">SOLD OUT</span>
-														<span class="marquee__text">SOLD OUT</span>
-														<span class="marquee__text">SOLD OUT</span>
-														<span class="marquee__text">SOLD OUT</span>
-													</p>
-													<p class="marquee__loop">
-														<span class="marquee__text">SOLD OUT</span>
-														<span class="marquee__text">SOLD OUT</span>
-														<span class="marquee__text">SOLD OUT</span>
-														<span class="marquee__text">SOLD OUT</span>
-													</p>
-												</div>
-											</div>
-											<!-- // soldout -->
+										<a href="#" class="menu__link">
 											<div class="menu__colors">
 												<span class="menu__color"></span>
 												<span class="menu__color"></span>
