장바구니일단완료

--- a/src/order/basket.html
+++ b/src/order/basket.html
@@ -91,7 +91,7 @@
 									</colgroup>
 									<thead>
 											<tr>
-													<th scope="col"><input type="checkbox" class="chk_design" onclick='{$chk_basketlist}' /></th>
+													<th scope="col"><input type="checkbox" class="chk_design" onclick='{$chk_basketlist}' /> 전체선택</th>
 													<th scope="col"><!-- 이미지 //--> </th>
 													<th scope="col">상품정보</th>
 													<!-- <th scope="col">판매가</th> -->
