--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -313,7 +313,7 @@
 										<div class="swiper-wrapper">
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
-													<div class="best-menu__img"><img data-src="./assets/images/@img_product05.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
+													<div class="best-menu__img"><img data-src="./assets/images/@img_product05.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 												</div>
 											</div>
 											<div class="swiper-slide">
@@ -341,12 +341,12 @@
 										<div class="swiper-wrapper">
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
-													<div class="best-menu__img"><img data-src="./assets/images/@product.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
+													<div class="best-menu__img"><img data-src="./assets/images/@product.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 												</div>
 											</div>
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
-													<div class="best-menu__img"><img data-src="./assets/images/dummy.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
+													<div class="best-menu__img"><img data-src="./assets/images/dummy.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 												</div>
 											</div>
 										</div>
@@ -370,12 +370,12 @@
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img data-src="./assets/images/@img_product06.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
+												<div class="best-menu__img"><img data-src="./assets/images/@img_product06.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 											</div>
 										</div>
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img data-src="./assets/images/@img_product_celeb.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
+												<div class="best-menu__img"><img data-src="./assets/images/@img_product_celeb.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 											</div>
 										</div>
 									</div>
@@ -396,12 +396,12 @@
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img data-src="./assets/images/@img_product07.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
+												<div class="best-menu__img"><img data-src="./assets/images/@img_product07.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 											</div>
 										</div>
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img data-src="./assets/images/@img_product_celeb.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
+												<div class="best-menu__img"><img data-src="./assets/images/@img_product_celeb.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 											</div>
 										</div>
 									</div>
@@ -422,12 +422,12 @@
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img data-src="./assets/images/@img_product08.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
+												<div class="best-menu__img"><img data-src="./assets/images/@img_product08.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 											</div>
 										</div>
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
-												<div class="best-menu__img"><img data-src="./assets/images/@img_product_celeb.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
+												<div class="best-menu__img"><img data-src="./assets/images/@img_product_celeb.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 											</div>
 										</div>
 									</div>
@@ -509,7 +509,7 @@
 													<div class="menu__item">
 														<div class="menu__round">
 															<div class="menu__inner">
-																<div class="menu__img"><img data-src="./assets/images/dummy.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
+																<div class="menu__img"><img data-src="./assets/images/dummy.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 															</div>
 														</div>
 													</div>
@@ -517,7 +517,7 @@
 														<div class="menu__round">
 															<div class="menu__inner">
 																<a href="#" class="menu__link">
-																	<div class="menu__img"><img data-src="./assets/images/product.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
+																	<div class="menu__img"><img data-src="./assets/images/product.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 																	<div class="menu__info">
 																		<p class="menu__name">
 																			22SS SLIM NEAT<br>
@@ -539,7 +539,7 @@
 													<div class="menu__item">
 														<div class="menu__round">
 															<div class="menu__inner">
-																<div class="menu__img"><img data-src="./assets/images/dummy.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
+																<div class="menu__img"><img data-src="./assets/images/dummy.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 															</div>
 														</div>
 													</div>
@@ -547,7 +547,7 @@
 														<div class="menu__round">
 															<div class="menu__inner">
 																<a href="#" class="menu__link">
-																	<div class="menu__img"><img data-src="./assets/images/product.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader" class="swiper-lazy"></div></div>
+																	<div class="menu__img"><img data-src="./assets/images/product.png" alt="" class="swiper-lazy"><div class="swiper-lazy-preloader"></div></div>
 																	<div class="menu__info">
 																		<p class="menu__name">
 																			22SS SLIM NEAT<br>
