--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -240,7 +240,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="best-menu__item best-menu__item--figure">
+							<div class="best-menu__item--figure">
 								<div class="best-menu__img"><img loading="lazy"src="./assets/images/dummy.png" alt=""></div>
 							</div>
 						</div>
